syntax = "proto3";
option go_package=".;proto";
package pb;

service AuthService {
    rpc SignUp (SignUpRequest) returns (SignUpResponse) {};
}

message SignUpRequest {
    string name = 1;
    string password = 2;
    bool isCreator = 3;
}

message SignUpResponse {}